Refactor all files
SOFTWARE.org:
- Use lists instead of code blocks
- Delete items that are no longer needed
- Adjust the classification of some items
- Adjust the title order
- Add a format that distinguishes dependencies
- Add a format that distinguishes AUR

README.org
Explain the format of distinguishing dependencies and distinguishing AUR.

--- a/README.org
+++ b/README.org
@@ -8,6 +8,8 @@
   + This is my frequently used software list
   + Tested with Arch Linux
   + This list is rolled up
+  + *App* means that if you install Apps in the order of this article, then this app is a dependency of the previously installed App. No need to install again.
+  + _App_ mens this app is in AUR (Arch User Repository).
   + Please *DO NOT* copy this document, but you can reprint the link
 
   Click [[https://github.com/re-mx/ArchApps/blob/master/SOFTWARE.org][HERE]] to read it
