--- a/SOFTWARE.org
+++ b/SOFTWARE.org
@@ -2,7 +2,7 @@
 
 Author: [[https://re-mx.github.io][MX Reimu]]
 
-Update: 2018-09-02
+Update: 2018-09-04
 
 License: GNU GPLv3 https://gnu.org/licenses/gpl.html
 
@@ -72,6 +72,7 @@ License: GNU GPLv3 https://gnu.org/licenses/gpl.html
   + adobe-source-code-pro-fonts
   + adobe-source-han-sans-cn-fonts
   + ttf-dejavu
+  + ttf-inconsolata
   + ttf-arphic-ukai
   + ttf-arphic-uming
   + wqy-bitmapfont
