--- a/README.org
+++ b/README.org
@@ -8,9 +8,9 @@
   + This is my frequently used software list
   + Tested with Arch Linux
   + This list is rolled up
-  + *App* means that if you install Apps in the order of this article, then this app is a dependency of the previously installed apps. No need to install again.
-  + /App/ mens this app is in AUR ([[https://aur.archlinux.org][Arch User Repository]]).
-  + +App+ means that this app should not be installed during basic installation.
+  + Ⓘ -- if you install Apps in the order of this list, then this app is a dependency of the previously installed apps. No need to install again.
+  + Ⓤ -- this app is in AUR ([[https://aur.archlinux.org][Arch User Repository]]).
+  + Ⓝ -- DO NOT install this app in a basic installation.
   + Please *DO NOT* copy this document, but you can reprint the link
 
   Click [[https://github.com/re-mx/ArchApps/blob/master/SOFTWARE.org][HERE]] to read it
