--- a/ArchApps.org
+++ b/ArchApps.org
@@ -1,25 +1,25 @@
-#+TITLE: Software List
+#+TITLE: Arch Linux Apps I frequently use
 
 Author: [[https://re-mx.github.io][MX Reimu]]
 
-Update: 2018-12-13
+Update: 2019-01-25
 
-License: GNU GPLv3 https://gnu.org/licenses/gpl.html
+License: [[http://creativecommons.org/licenses/by-nc-sa/4.0/][https://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png]]
 
-* OS Installation
-  + base
-  + base-devel
-  + intel-ucode
+Comment Symbol:
++ Ⓡ -\- Highly recommended app
++ Ⓛ -\- Very low usage app
++ Ⓤ -\- This app is in AUR ([[https://aur.archlinux.org][Arch User Repository]]).
 
 * Shell
   + zsh
   + zsh-completions
 
 * Build Tools
-  + gcc Ⓘ
-  + autoconf Ⓘ
-  + automake Ⓘ
-  + make Ⓘ
+  + gcc
+  + autoconf
+  + automake
+  + make
   + clang
   + llvm
   + cmake
@@ -29,11 +29,11 @@ License: GNU GPLv3 https://gnu.org/licenses/gpl.html
 * Programming Language
   + lua
   + nodejs
-  + perl Ⓘ
+  + perl
   + php
   + python
   + python2
-  + ruby ⓃⒶ
+  + ruby
 
 * Package Manager
   + python-pip
@@ -43,112 +43,112 @@ License: GNU GPLv3 https://gnu.org/licenses/gpl.html
 * Development Tools
   + gdb
   + git
-  + tidy ⓃⒶ
+  + tidy
 
 * Network Tools
   + libcss
   + openssh
-  + openssl Ⓘ
-  + gnutls Ⓘ
+  + openssl
+  + gnutls
 
 * Sound
   + pulseaudio
   + portaudio
-  + openal ⓃⒶ
+  + openal
 
 * Graphics
   + xorg-server
   + xorg-xinit
   + xorg-apps
   + libxss
-  + wayland Ⓘ
+  + wayland
   + xorg-server-xwayland
   + python-xdg
   + python2-xdg
   + gtk2
   + gtk3
-  + webkit2gtk Ⓝ
+  + webkit2gtk Ⓛ
   + qt5-base
-  + qt5-3d Ⓝ
+  + qt5-3d Ⓛ
 
 * VirtualBox Modules
   + virtualbox-guest-modules-arch
   + virtualbox-guest-utils
 
 * Fonts
-  + adobe-source-code-pro-fonts Ⓝ
-  + adobe-source-han-sans-cn-fonts Ⓝ
+  + adobe-source-code-pro-fonts Ⓡ
+  + adobe-source-han-sans-cn-fonts Ⓡ
   + ttf-dejavu
-  + ttf-inconsolata Ⓝ
+  + ttf-inconsolata Ⓛ
   + ttf-arphic-ukai
   + ttf-arphic-uming
-  + wqy-bitmapfont Ⓝ
+  + wqy-bitmapfont Ⓛ
   + wqy-microhei
   + wqy-zenhei
 
 * Media Backend
   + ffmpeg
-  + gst-plugins-bad Ⓝ
-  + gst-plugins-base Ⓝ
-  + gst-plugins-base-libs Ⓝ
-  + gst-plugins-espeak Ⓝ
-  + gst-plugins-good Ⓝ
-  + gst-plugins-ugly Ⓝ
-  + gstreamer Ⓝ
+  + gst-plugins-bad Ⓛ
+  + gst-plugins-base Ⓛ
+  + gst-plugins-base-libs Ⓛ
+  + gst-plugins-espeak Ⓛ
+  + gst-plugins-good Ⓛ
+  + gst-plugins-ugly Ⓛ
+  + gstreamer Ⓛ
 
 * Codec
-  + a52dec Ⓝ
-  + aom Ⓘ
-  + cdparanoia Ⓝ
+  + a52dec Ⓛ
+  + aom
+  + cdparanoia Ⓛ
   + celt
   + faac
   + faad2
-  + flac Ⓘ
-  + gst-libav Ⓝ
-  + lame Ⓘ
+  + flac
+  + gst-libav Ⓛ
+  + lame
   + libcddb
   + libcdio
-  + libdca ⓃⒶ
-  + libdv Ⓝ
+  + libdca
+  + libdv Ⓛ
   + libdvdcss
   + libdvdread
-  + libgme Ⓝ
+  + libgme Ⓛ
   + libmad
-  + libmpeg2 Ⓝ
+  + libmpeg2 Ⓛ
   + libraw
-  + libsrtp Ⓝ
-  + libvisual Ⓝ
+  + libsrtp Ⓛ
+  + libvisual Ⓛ
   + openexr
-  + openjpeg2 Ⓘ
-  + sbc ⓃⒶ
+  + openjpeg2
+  + sbc
   + sdl
   + taglib
   + wavpack
-  + x264 Ⓘ
-  + x265 Ⓘ
-  + zvbi Ⓝ
+  + x264
+  + x265
+  + zvbi Ⓛ
 
 * Display Manager
   + lightdm
   + lightdm-gtk-greeter
-  + lightdm-gtk-greeter-settings Ⓝ
+  + lightdm-gtk-greeter-settings Ⓛ
 
 * Window Manager
-  + awesome
-  + gnome Ⓝ
+  + awesome Ⓡ
+  + gnome Ⓛ
 
 * Editor
-  + emacs
+  + emacs Ⓡ
   + visual-studio-code Ⓤ
 
 * Web Browser
   + firefox
   + firefox-i18n-zh-cn
   + firefox-i18n-zh-tw
-  + chromium Ⓝ
+  + chromium Ⓛ
 
 * Terminal
-  + rxvt-unicode
+  + rxvt-unicode Ⓡ
 
 * Themes
   + gnome-themes-extra
@@ -159,9 +159,9 @@ License: GNU GPLv3 https://gnu.org/licenses/gpl.html
   + bc
   + neon
   + ntp
-  + ripgrep
-  + rtmpdump Ⓝ
-  + the_silver_searcher Ⓝ
+  + ripgrep Ⓡ
+  + rtmpdump Ⓛ
+  + the_silver_searcher Ⓛ
   + udisks2
   + xclip
   + zip
@@ -180,9 +180,9 @@ License: GNU GPLv3 https://gnu.org/licenses/gpl.html
   + tern
   + eslint
   + tslint
-  + typescript
+  + typescript Ⓡ
 
-* Unclassified Ⓝ
+* Unclassified
   + archlinux-wallpaper
   + gimp
   + espeak
