--- a/ArchApps.org
+++ b/ArchApps.org
@@ -8,7 +8,7 @@ License: [[http://creativecommons.org/licenses/by-nc-sa/4.0/][https://i.creative
 
 Comment Symbol:
 + *App* -\- Highly recommended app
-+ ~app~ -\- Very low usage app
++ +app+ -\- Very low usage app
 + /app/ -\- This app is in AUR ([[https://aur.archlinux.org][Arch User Repository]]).
 
 * Shell
@@ -67,9 +67,9 @@ Comment Symbol:
   + python2-xdg
   + gtk2
   + gtk3
-  + ~webkit2gtk~
+  + +webkit2gtk+
   + qt5-base
-  + ~qt5-3d~
+  + +qt5-3d+
 
 * VirtualBox Modules
   + virtualbox-guest-modules-arch
@@ -79,45 +79,45 @@ Comment Symbol:
   + *adobe-source-code-pro-fonts*
   + *adobe-source-han-sans-cn-fonts*
   + ttf-dejavu
-  + ~ttf-inconsolata~
+  + +ttf-inconsolata+
   + ttf-arphic-ukai
   + ttf-arphic-uming
-  + ~wqy-bitmapfont~
+  + +wqy-bitmapfont+
   + wqy-microhei
   + wqy-zenhei
 
 * Media Backend
   + ffmpeg
-  + ~gst-plugins-bad~
-  + ~gst-plugins-base~
-  + ~gst-plugins-base-libs~
-  + ~gst-plugins-espeak~
-  + ~gst-plugins-good~
-  + ~gst-plugins-ugly~
-  + ~gstreamer~
+  + +gst-plugins-bad+
+  + +gst-plugins-base+
+  + +gst-plugins-base-libs+
+  + +gst-plugins-espeak+
+  + +gst-plugins-good+
+  + +gst-plugins-ugly+
+  + +gstreamer+
 
 * Codec
-  + ~a52dec~
+  + +a52dec+
   + aom
-  + ~cdparanoia~
+  + +cdparanoia+
   + celt
   + faac
   + faad2
   + flac
-  + ~gst-libav~
+  + +gst-libav+
   + lame
   + libcddb
   + libcdio
   + libdca
-  + ~libdv~
+  + +libdv+
   + libdvdcss
   + libdvdread
-  + ~libgme~
+  + +libgme+
   + libmad
-  + ~libmpeg2~
+  + +libmpeg2+
   + libraw
-  + ~libsrtp~
-  + ~libvisual~
+  + +libsrtp+
+  + +libvisual+
   + openexr
   + openjpeg2
   + sbc
@@ -126,16 +126,16 @@ Comment Symbol:
   + wavpack
   + x264
   + x265
-  + ~zvbi~
+  + +zvbi+
 
 * Display Manager
   + lightdm
   + lightdm-gtk-greeter
-  + ~lightdm-gtk-greeter-settings~
+  + +lightdm-gtk-greeter-settings+
 
 * Window Manager
   + *awesome*
-  + ~gnome~
+  + +gnome+
 
 * Editor
   + *emacs*
@@ -145,7 +145,7 @@ Comment Symbol:
   + firefox
   + firefox-i18n-zh-cn
   + firefox-i18n-zh-tw
-  + ~chromium~
+  + +chromium+
 
 * Terminal
   + *rxvt-unicode*
@@ -160,8 +160,8 @@ Comment Symbol:
   + neon
   + ntp
   + *ripgrep*
-  + ~rtmpdump~
-  + ~the_silver_searcher~
+  + +rtmpdump+
+  + +the_silver_searcher+
   + udisks2
   + xclip
   + zip
