--- a/OS_INSTALLATION.org
+++ b/OS_INSTALLATION.org
@@ -2,7 +2,7 @@
 
 Author: [[https://re-mx.github.io][MX Reimu]]
 
-Update: 2019-01-25
+Update: 2019-01-26
 
 License: [[http://creativecommons.org/licenses/by-nc-sa/4.0/][https://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png]]
 
@@ -81,6 +81,7 @@ Some dependencies may be missed if you don't install in this order.
   + libcdio
   + libdvdcss
   + libdvdread
+  + libexif
   + libmad
   + libraw
   + openexr
@@ -123,7 +124,7 @@ Some dependencies may be missed if you don't install in this order.
 
 * After OS Installation
 
-Please *DO NOT* install these apps if this installation is used as the base image of a VM.
+  Please *DO NOT* install these apps if this installation is used as the base image of a VM.
 
   + ruby
   + tidy
