Fix toc for ArchApps.org

--- a/ArchApps.org
+++ b/ArchApps.org
@@ -12,27 +12,27 @@ Comment Symbol:
 + /app/ -\- This app is in AUR ([[https://aur.archlinux.org][Arch User Repository]]).
 
 * Table of Content
-- [[#Shell][shell]]
-- [[#Build Tools][Build Tools]]
-- [[#Programming Language][Programming Language]]
-- [[#Package Manager][Package Manager]]
-- [[#Development Tools][Development Tools]]
-- [[#Network Tools][Network Tools]]
-- [[#Sound][Sound]]
-- [[#Graphics][Graphics]]
-- [[#VirtualBox Modules][VirtualBox Modules]]
-- [[#Fonts][Fonts]]
-- [[#Media Backend][Media Backend]]
-- [[#Codec][Codec]]
-- [[#Display Manager][Display Manager]]
-- [[#Window Manager][Window Manager]]
-- [[#Editor][Editor]]
-- [[#Terminal][Terminal]]
-- [[#Themes][Themes]]
-- [[#Utils][Utils]]
-- [[#Python Packages][Python Packages]]
-- [[#NPM Packages][NPM Packages]]
-- [[#Unclassified][Unclassified]]
+  - [[#Shell][shell]]
+  - [[#Build-Tools][Build Tools]]
+  - [[#Programming-Language][Programming Language]]
+  - [[#Package-Manager][Package Manager]]
+  - [[#Development-Tools][Development Tools]]
+  - [[#Network-Tools][Network Tools]]
+  - [[#Sound][Sound]]
+  - [[#Graphics][Graphics]]
+  - [[#VirtualBox-Modules][VirtualBox Modules]]
+  - [[#Fonts][Fonts]]
+  - [[#Media-Backend][Media Backend]]
+  - [[#Codec][Codec]]
+  - [[#Display-Manager][Display Manager]]
+  - [[#Window-Manager][Window Manager]]
+  - [[#Editor][Editor]]
+  - [[#Terminal][Terminal]]
+  - [[#Themes][Themes]]
+  - [[#Utils][Utils]]
+  - [[#Python-Packages][Python Packages]]
+  - [[#NPM-Packages][NPM Packages]]
+  - [[#Unclassified][Unclassified]]
 
 * Shell
   + zsh
