--- a/README.org
+++ b/README.org
@@ -11,4 +11,4 @@
 
   All articles in this repo are licensed under [[http://creativecommons.org/licenses/by-nc-sa/4.0/][CC BY-NC-SA 4.0]].
 
-  -MX Reimu
+  -Yuri MX
